--- a/requirements.txt
+++ b/requirements.txt
@@ -120,7 +120,7 @@ nodeenv==1.8.0
 numexpr==2.8.4
 numpy==1.25.2
 oauthlib==3.2.2
-openai==0.27.2
+openai>=0.27.2
 openapi-python-client==0.13.4
 openapi-schema-pydantic==1.2.4
 opencv-python==4.8.0.76
@@ -182,7 +182,7 @@ pyyaml_env_tag==0.1
 readability-lxml==0.8.1
 redis==4.5.5
 regex==2023.5.5
-requests==2.30.0
+requests>=2.30.0
 requests-oauthlib==1.3.1
 rsa==4.9
 scikit-learn==1.3.0
