--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@ abstract_singleton==1.0.1
 aiofiles==23.2.1
 aiohttp==3.8.4
 aiosignal==1.3.1
-altair==5.1.1
-anthropic==0.3.6
+altair>=4.5.0
+anthropic==0.3.5
 anyio==3.7.1
 appdirs==1.4.4
-asgiref==3.7.2
+asgiref>=4.5.0
 asttokens==2.2.1
 astunparse==1.6.3
 async-generator==1.10
@@ -72,8 +72,8 @@ google-auth==2.18.0
 google-auth-httplib2==0.1.0
 google-search-results==2.4.2
 googleapis-common-protos==1.59.0
-gradio==3.44.4
-gradio_client==0.5.1
+gradio>=4.1
+gradio_client>=4.1
 greenlet==2.0.2
 gTTS==2.3.1
 h11==0.14.0
