--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@ abstract_singleton==1.0.1
 aiofiles==23.2.1
 aiohttp==3.8.4
 aiosignal==1.3.1
-altair>=4.5.0
-anthropic==0.3.5
+altair==5.1.1
+anthropic==0.3.6
 anyio==3.7.1
 appdirs==1.4.4
-asgiref>=4.5.0
+asgiref==3.7.2
 asttokens==2.2.1
 astunparse==1.6.3
 async-generator==1.10
@@ -72,8 +72,8 @@ google-auth==2.18.0
 google-auth-httplib2==0.1.0
 google-search-results==2.4.2
 googleapis-common-protos==1.59.0
-gradio>=4.1
-gradio_client>=4.1
+gradio==3.44.4
+gradio_client==0.5.1
 greenlet==2.0.2
 gTTS==2.3.1
 h11==0.14.0
@@ -100,7 +100,7 @@ langchain==0.0.231
 langchainplus-sdk==0.0.20
 langcodes==3.3.0
 langsmith==0.0.33
-litellm==1.37.20
+litellm==0.7.5
 loguru==0.6.0
 lxml==4.9.2
 Markdown==3.3.7
@@ -120,7 +120,7 @@ nodeenv==1.8.0
 numexpr==2.8.4
 numpy==1.25.2
 oauthlib==3.2.2
-openai>=0.27.2
+openai==0.27.2
 openapi-python-client==0.13.4
 openapi-schema-pydantic==1.2.4
 opencv-python==4.8.0.76
@@ -182,7 +182,7 @@ pyyaml_env_tag==0.1
 readability-lxml==0.8.1
 redis==4.5.5
 regex==2023.5.5
-requests>=2.30.0
+requests==2.30.0
 requests-oauthlib==1.3.1
 rsa==4.9
 scikit-learn==1.3.0
