--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,6 +6,7 @@
 # OPENAI_API_KEY: "YOUR_API_KEY"
 # OPENAI_API_BASE: "YOUR_API_BASE"
 # OPENAI_PROXY: "http://127.0.0.1:8118"
+OPENAI_API_BASE: "https://api.openai.com/v1"
 OPENAI_API_MODEL: "gpt-3.5-turbo"
 MAX_TOKENS: 1500
 RPM: 10
@@ -32,7 +33,3 @@ RPM: 10
 ## Visit https://serper.dev/ to get key.
 # SERPER_API_KEY: "YOUR_API_KEY"
 
-services:
-  web:
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
